# g-hauler

./: .gitattributes  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test-build.yml  test-release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/resources/: detection_patches.json
src-tauri/src/: applications.rs  config.rs  constants.rs  ghub.rs  ghub_app.rs  lib.rs  main.rs  paths.rs  settings_db.rs  store.rs  tray.rs  util.rs  validation.rs
src-tauri/src/applications/: applications_json.rs  ghub_version.rs  mod.rs  models.rs  paths.rs  settings_db.rs  validation.rs
src-tauri/src/core/: constants.rs  mod.rs  state.rs  store.rs
src-tauri/src/debug/: commands.rs
src-tauri/src/detection_patches/: applier.rs  commands.rs  loader.rs  persistence.rs
src-tauri/src/g_hauler/: auto_start.rs  mod.rs  store.rs  validation.rs  websocket.rs  websocket_commands.rs
src-tauri/src/g_hub/: applications_json.rs  mod.rs  util.rs
src-tauri/src/game_detection/: commands.rs  mod.rs  models.rs  scanner.rs  utils.rs
src-tauri/src/ghub_game_patches/: applier.rs  commands.rs  loader.rs  mod.rs  models.rs  persistence.rs
src-tauri/src/integrations/: igdb.rs
src-tauri/src/models/: app_state.rs  ghub_app.rs  mod.rs  path_validation.rs
src-tauri/src/preferences/: mod.rs
src-tauri/src/settings/: auto_start.rs  commands.rs  mod.rs  models.rs  registry.rs  schema.rs  settings_schema.json  state.rs  sync.rs  validation.rs
src-tauri/src/settings/adapters/: autostart.rs  mod.rs  tray.rs
src-tauri/src/sync/: version_check.rs
src-tauri/src/websocket/: client.rs  commands.rs  mod.rs
src/lib/: constants.ts  store.ts  types.ts
src/lib/components/: BottomBar.svelte  GHubDataLocModal.svelte  GameCard.svelte  GameCardSkeleton.svelte  GameCardWebSocket.svelte  GameEditModal.svelte  Modal.svelte  Popup.svelte  SelectGHubLocPopup.svelte  SelectGHubLocation.svelte  Setting.svelte  Sidebar.svelte  SplashScreen.svelte  TitleBar.svelte
src/lib/components/detection/: CustomScanPanel.svelte  ScanResultCard.svelte  ScanResults.svelte
src/lib/components/layout/: BottomBar.svelte  Sidebar.svelte  TitleBar.svelte
src/lib/components/modal/: GHubDirSelectModal.svelte  GameEditModal.svelte  InfoModal.svelte  Modal.svelte
src/lib/components/tabs/: CommandsTab.svelte  DetectionTab.svelte  GeneralTab.svelte
src/lib/components/ui/: Switch.svelte
src/lib/services/: websocket.ts
src/lib/stores/: appState.ts  detection.svelte.ts  developerMode.svelte.ts  index.ts  websocket.svelte.ts
src/lib/stores/persistent/: user-preferences.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/add-games/: +page.svelte
src/routes/add_games/: +page.svelte
src/routes/detection/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/splash/: +page.svelte
(+1 files in other folders)
