[package]
name = "g-hauler"
version = "0.1.0"
description = "A fast, lightweight desktop app for patching G HUB game detection and managing game data."
authors = ["Julia Xu"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/xyj-3/g-hauler"
keywords = ["G HUB", "Logitech G HUB", "Logitech", "Logitech devices", "gaming", "gaming devices", "game detection", "patching", "data management", "desktop app", "tauri"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "g_hauler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-log = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
